[package]
name = "fetch-ccip"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"] }
chrono = "0.4.40"
futures = "0.3.31"
ipnet = "2.11.0"
rand = "0.9.0"

[profile.dev]
opt-level = 0
debug = true
incremental = true