[package]
name = "fetch-ccip"
version = "0.1.0"
edition = "2024"
authors = ["Neuron Grid <neuron-grid@neuron-grid.net>"]
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
futures = "0.3"
ipnet = "2.8"
rand = "0.8"
clap = { version = "4.5.32", features = ["derive"] }

[[bin]]
name = "fet-ip"
path = "src/main.rs"